<resources>
    <!--Login Fragment-->
    <string name="app_name">TicketToRide</string>
    <string name="serverHost">Server Host: </string>
    <string name="serverPort">Server Port: </string>
    <string name="userName">User Name: </string>
    <string name="password">Password: </string>

    <string name="signInButton">SIGN IN</string>
    <string name="registerButton">REGISTER</string>

    <!--Games Fragment-->
    <string name="createGame">CREATE GAME</string>

    <string-array name="numberOfPlayersSpinner">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <!--Waiting Fragment-->
    <string name="waiting">Waiting...</string>
    <string name="players">Players</string>

    <!--Setup View-->
    <string name="youArePlayer">You are player</string>
    <string name="startingHand">Starting Hand:</string>
    <string name="destinationCards">Destination Cards</string>
    <string name="pickAtLeast2">Pick at least 2</string>
    <string name="ready">Ready!</string>
    <string name="yourColor">Your Color:</string>

    <!--Board Fragment-->
    <string name="yourHand">YOUR HAND</string>
    <string name="blueInHand">BLUE</string>
    <string name="redInHand">RED</string>
    <string name="blackInHand">BLACK</string>
    <string name="whiteInHand">WHITE</string>
    <string name="yelloInHand">YELLOW</string>
    <string name="orangeInHand">ORANGE</string>
    <string name="greenInHand">GREEN</string>
    <string name="wildInHand">WILD</string>"

    <string name="otherPlayers">OTHER PLAYERS</string>

    <string name="availableCards">AVAILABLE CARDS</string>
    <string name="destinationsLeft">Destination Cards Left: </string>

    <string name="trainCardsLeft">Train Cards left in Deck</string>

    <string name="viewDestinations">VIEW YOUR DESTINATION CARDS</string>

    <string name="chatAndHistory">CHAT BOX/GAME HISTORY</string>

    <string name="points">POINTS:</string>
    <string name="trains">TRAINS:</string>

    <string name="send">SEND</string>

    <string name="rejoin">REJOIN GAME</string>
</resources>
